--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.3.1",
     "react-icon": "^1.0.0",
     "react-router-dom": "^7.1.1",
+    "workspace": "file:..",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
